Update to latest UI changes.

--- a/wordwhisk/Guidelines.html
+++ b/wordwhisk/Guidelines.html
@@ -149,11 +149,19 @@
                 	Here we’ve already gotten the ‘POOL’ word and are now working on the highlighted 5-letter word just above. Note that the 8 available letters for guessing the word are shown below the picture and are ‘EILSWSOT’. Got it?
                 </p>
                 <p class="style_standard_paragraph">
-                	Let’s see what <span class="style_findaword">WordWhisk</span> suggests when given the candidate letters and word length:
+                	So let’s launch <span class="style_findaword">WordWhisk</span> and tap on the <b>Find a Word</b> button at the bottom of the screen:
+                </p>
+                <div class="style_center_images">
+                	<div class="inline-block stroke_0" style="height: 105px; width: 272px; position: relative;">
+                		<img src="Guidelines_files/WWStartFindAWord.jpg" alt=""/>
+                	</div>
+                </div>
+                <p class="style_standard_paragraph">
+                	Now let’s see what <span class="style_findaword">WordWhisk</span> suggests when given the candidate letters and word length:
                 </p>
                 <!-- WordWhisk Hint -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="height: 374px; width: 272px; position: relative;">
+                	<div class="inline-block stroke_0" style="height: 356px; width: 272px; position: relative;">
                 		<img src="Guidelines_files/FAW_OneClue.jpg" alt=""/>
                 	</div>
                 </div>
@@ -171,7 +179,7 @@
                 </p>
                 <!-- WordWhisk with Bikini Hint -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="height: 333px; width: 272px; position: relative;">
+                	<div class="inline-block stroke_0" style="height: 323px; width: 272px; position: relative;">
                 		<img src="Guidelines_files/FAW_OneClueKnown.jpg" alt=""/>
                 	</div>
                 </div>
@@ -180,7 +188,7 @@
                 </p>
                 <!-- Final One Clue Solution -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="height: 367px; width: 272px; position: relative;">
+                	<div class="inline-block stroke_0" style="height: 370px; width: 272px; position: relative;">
                 		<img src="Guidelines_files/FAW_OneClueFinal.jpg" alt=""/>
                 	</div>
                 </div>
@@ -207,7 +215,7 @@
                 </p>
                 <!-- WordWhisk Wordscapes Word Entry -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="height: 149px; width: 272px; position: relative;">
+                	<div class="inline-block stroke_0" style="height: 178px; width: 272px; position: relative;">
                 		<img src="Guidelines_files/FAW_WordscapeLetters.jpg" alt=""/>
                 	</div>
                 </div>
@@ -216,7 +224,7 @@
                 </p>
                 <!-- WordWhisk Wordscapes Results -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="height: 165px; width: 277px; position: relative;">
+                	<div class="inline-block stroke_0" style="height: 281px; width: 277px; position: relative;">
                 		<img src="Guidelines_files/FAW_WordscapeWords.jpg" alt=""/>
                 	</div>
                 </div>
