--- a/wordwhisk/One_Word_Range.html
+++ b/wordwhisk/One_Word_Range.html
@@ -132,8 +132,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="One_Word_Range_files/FSWR_020_PickOneWord.png" alt=""/>
+                	<div class="inline-block stroke_0" style="height: 105px; width: 272px; position: relative;">
+                		<img src="One_Word_Range_files/FSWR_020_PickOneWord.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -141,8 +141,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="One_Word_Range_files/FSWR_02_RangeFirst.png" alt=""/>
+                	<div class="inline-block stroke_0" style="height: 311px; width: 272px; position: relative;">
+                		<img src="One_Word_Range_files/FSWR_02_RangeFirst.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -153,8 +153,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="One_Word_Range_files/FSWR_03_RangeFirstAndLast.png" alt=""/>
+                	<div class="inline-block stroke_0" style="height: 83px; width: 272px; position: relative;">
+                		<img src="One_Word_Range_files/FSWR_03_RangeFirstAndLast.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -165,8 +165,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="One_Word_Range_files/FSWR_04_ShowingFirstAndLast.png" alt=""/>
+                	<div class="inline-block stroke_0" style="height: 472px; width: 272px; position: relative;">
+                		<img src="One_Word_Range_files/FSWR_04_ShowingFirstAndLast.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -177,8 +177,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="One_Word_Range_files/FSWR_05_RangeEntire.png" alt=""/>
+                	<div class="inline-block stroke_0" style="height: 81px; width: 272px; position: relative;">
+                		<img src="One_Word_Range_files/FSWR_05_RangeEntire.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -189,8 +189,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="One_Word_Range_files/FSWR_06_ShowingEntire.png" alt=""/>
+                	<div class="inline-block stroke_0" style="height: 519px; width: 272px; position: relative;">
+                		<img src="One_Word_Range_files/FSWR_06_ShowingEntire.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -210,7 +210,7 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
+                	<div class="inline-block stroke_0" style="height: 325px; width: 292px; position: relative;">
                 		<img src="One_Word_Range_files/FSWR_08_ShowingHighlighted.png" alt=""/>
                 	</div>
                 </div>
