--- a/wordwhisk/One_Word_Single.html
+++ b/wordwhisk/One_Word_Single.html
@@ -117,12 +117,12 @@
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
-                	We've been given 11 letters to spell a word 7 letters long and let’s just pretend that we've been stumped in coming up with the final correct word. Let’s bring up <span class="style_findaword">WordWhisk</span> and get ready to go…
+									 We’ve been given 11 letters to spell a word 7 letters long and let’s just pretend that we’ve been stumped in coming up with the final correct word. Let’s bring up <span class="style_findaword">WordWhisk</span> and get ready to go…
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="One_Word_Single_files/OWFL_02_GetGoing.png" alt=""/>
+                 	<div class="inline-block stroke_0" style="height: 169px; width: 272px; position: relative;">
+                		<img src="One_Word_Single_files/OWFL_02_GetGoing.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -130,8 +130,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="One_Word_Single_files/OWFL_02_RangeOptionHighlighted.png" alt=""/>
+                  <div class="inline-block stroke_0" style="height: 369px; width: 232px; position: relative;">
+                		<img src="One_Word_Single_files/OWFL_02_RangeOptionHighlighted.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -142,8 +142,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="One_Word_Single_files/OWFL_03_1stLetter.png" alt=""/>
+                	<div class="inline-block stroke_0" style="height: 295px; width: 272px; position: relative;">
+                		<img src="One_Word_Single_files/OWFL_03_1stLetter.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -151,7 +151,7 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
+                	<div class="inline-block stroke_0" style="height: 159px; width: 272px; position: relative;">
                 		<img src="One_Word_Single_files/OWFL_04_PlusButton.png" alt=""/>
                 	</div>
                 </div>
