--- a/wordwhisk/Two_Words.html
+++ b/wordwhisk/Two_Words.html
@@ -125,8 +125,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="Two_Words_files/FTW_02_ShowEntire.png" alt=""/>
+                	<div class="inline-block stroke_0" style="height: 280px; width: 290px; position: relative;">
+                		<img src="Two_Words_files/FTW_02_ShowEntire.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -140,8 +140,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="Two_Words_files/FTW_03_DoorClue.png" alt=""/>
+                	<div class="inline-block stroke_0" style="height: 204px; width: 290px; position: relative;">
+                		<img src="Two_Words_files/FTW_03_DoorClue.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -149,8 +149,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="Two_Words_files/FTW_04_ClueResults.png" alt=""/>
+                	<div class="inline-block stroke_0" style="height: 144px; width: 290px; position: relative;">
+                		<img src="Two_Words_files/FTW_04_ClueResults.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
@@ -170,8 +170,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="position: relative;">
-                		<img src="Two_Words_files/FTW_06_PuzzleHints.png" alt=""/>
+                	<div class="inline-block stroke_0" style="height: 579px; width: 290px; position: relative;">
+                		<img src="Two_Words_files/FTW_06_PuzzleHints.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
