--- a/wordwhisk/Welcome.html
+++ b/wordwhisk/Welcome.html
@@ -148,7 +148,7 @@
                 <p class="title_style"><span class="style_findaword">WordWhisk</span> helps
                  what apps?</p>
                 <p class="style_standard_paragraph">
-                	There are many fun games and other apps out there where finding one or more words is a
+                	There are <b>many</b> fun games and other apps out there where finding one or more words is a
                 	 lot of fun:
                 </p>
                 <ol class="full-width style_bullet_list">
@@ -194,11 +194,22 @@
                   </li>
                   <li>
                     	<span class="style_bullet_term">• </span>
+                    	<a onclick="window.open(this.href); return false;" title="https://apps.apple.com/us/app/word-villas-puzzle-story/id1466588301" href="https://apps.apple.com/us/app/word-villas-puzzle-story/id1466588301" onkeypress="window.open(this.href); return false;">Word Villas</a>
+                  </li>
+                  <li>
+                    	<span class="style_bullet_term">• </span>
+                    	<a onclick="window.open(this.href); return false;" title="https://apps.apple.com/us/app/crossword-wonder/id1465058550" href="https://apps.apple.com/us/app/crossword-wonder/id1465058550" onkeypress="window.open(this.href); return false;">Crossword Wonder</a>
+                  </li>
+                  <li>
+                    	<span class="style_bullet_term">• </span>
                     	and many more.
                   </li>
                 </ol>
                 <p class="style_standard_paragraph">
                 	This wonderful <span class="style_findaword">WordWhisk</span> app is even helpful while on a Delta Airlines flight where they have a timed Letter Mix game where they give you a bunch of letters and then a blank list of many words of various lengths for you to fill out.
+                </p>
+                <p class="style_standard_paragraph">
+                	Oh wait!! There’s one more <b>critical</b> game with which <span class="style_findaword">WordWhisk</span> can help a lot — Scrabble! There are many iOS Scrabble games but don’t forget that <span class="style_findaword">WordWhisk</span> can be a big help with the physical Scrabble board game.
                 </p>
               </div>
             </div>
