--- a/wordwhisk/Options.html
+++ b/wordwhisk/Options.html
@@ -56,7 +56,7 @@
           </div>
           
           <div style="max-width: 384px; left: 185px; right: 15px; position: absolute; top: 7px;">
-            <img src="common/WordWhisk_Image.png" alt="" style="border: none; width: 100%; " />
+            <img src="common/WordWhisk_Image.jpg" alt="" style="border: none; width: 100%; " />
           </div>
           
           <!-- THIS DETERMINES THE HEIGHT OF THE CONTENT -->
