Fix picture: from png to jpg and adjust size.

--- a/wordwhisk/One_Word_Single.html
+++ b/wordwhisk/One_Word_Single.html
@@ -151,8 +151,8 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="height: 159px; width: 272px; position: relative;">
-                		<img src="One_Word_Single_files/OWFL_04_PlusButton.png" alt=""/>
+                	<div class="inline-block stroke_0" style="height: 294px; width: 272px; position: relative;">
+                		<img src="One_Word_Single_files/OWFL_04_PlusButton.jpg" alt=""/>
                 	</div>
                 </div>
                 <p class="style_standard_paragraph">
