Updated to latest UI presentation.

--- a/wordwhisk/Two_Words.html
+++ b/wordwhisk/Two_Words.html
@@ -138,9 +138,9 @@
                 <p class="style_standard_paragraph">
                 	Remember those underlines? We’re guessing they are telling us what the lengths (4 and 5) are of the two words we are looking for.
                 </p>
-                <!-- One Word Length Example -->
+                <!-- Two Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="height: 204px; width: 290px; position: relative;">
+                	<div class="inline-block stroke_0" style="height: 238px; width: 290px; position: relative;">
                 		<img src="Two_Words_files/FTW_03_DoorClue.jpg" alt=""/>
                 	</div>
                 </div>
@@ -170,7 +170,7 @@
                 </p>
                 <!-- One Word Length Example -->
                 <div class="style_center_images">
-                	<div class="inline-block stroke_0" style="height: 579px; width: 290px; position: relative;">
+                	<div class="inline-block stroke_0" style="height: 572px; width: 290px; position: relative;">
                 		<img src="Two_Words_files/FTW_06_PuzzleHints.jpg" alt=""/>
                 	</div>
                 </div>
