Add 'next' and 'prior' page buttons.
Also added comments about in-app purchase.

--- a/wordwhisk/ContactUs.html
+++ b/wordwhisk/ContactUs.html
@@ -119,7 +119,9 @@
                 <p class="style_wrap_up">
                 	WE WOULD LOVE TO HEAR FROM YOU!
                 </p>
-
+								<div class="w3-bar" style="margin-left: 10px; margin-right: 20px">
+									<button class="w3-button w3-left w3-green" onclick="window.location.href = 'PrivacyPolicy.html';">&laquo; Privacy Policy</button>
+								</div>
               </div>
             </div>
           </div>
