--- a/wordwhisk/Guidelines.html
+++ b/wordwhisk/Guidelines.html
@@ -283,6 +283,10 @@
 										READY! GET SET! GO!
 									</p>
 								</div>
+									<div class="w3-bar" style="margin-left: 10px; margin-right: 20px">
+										<button class="w3-button w3-left w3-green" onclick="window.location.href = 'Welcome.html';">&laquo; Welcome</button>
+										<button class="w3-button w3-right w3-green" onclick="window.location.href = 'One_Word_Single.html';">Single Fixed &raquo;</button>
+									</div>
               </div>
             </div>
           </div>
