--- a/wordwhisk/One_Word_Range.html
+++ b/wordwhisk/One_Word_Range.html
@@ -232,8 +232,10 @@
                 <p class="style_wrap_up">
                 	OH, THIS WILL BE FUN!
                 </p>
-                
-
+								<div class="w3-bar" style="margin-left: 10px; margin-right: 20px">
+									<button class="w3-button w3-left w3-green" onclick="window.location.href = 'One_Word_Single.html';">&laquo; Single Fixed</button>
+									<button class="w3-button w3-right w3-green" onclick="window.location.href = 'Two_Words.html';">Two Words &raquo;</button>
+								</div>
               </div>
             </div>
           </div>
