--- a/wordwhisk/One_Word_Single.html
+++ b/wordwhisk/One_Word_Single.html
@@ -236,8 +236,10 @@
                 <p class="style_wrap_up">
                 	HAVE FUN SOLVING THE TOUGHIES!
                 </p>
-                
-
+								<div class="w3-bar" style="margin-left: 10px; margin-right: 20px">
+									<button class="w3-button w3-left w3-green" onclick="window.location.href = 'Guidelines.html';">&laquo; Guidelines</button>
+									<button class="w3-button w3-right w3-green" onclick="window.location.href = 'One_Word_Range.html';">Single Range &raquo;</button>
+								</div>
               </div>
             </div>
           </div>
