--- a/wordwhisk/Options.html
+++ b/wordwhisk/Options.html
@@ -288,7 +288,10 @@
 									also applies to “Find Two Words” where the total length of both words to be found cannot be
 									greater than 22.</li>
                 </ul>                
-
+								<div class="w3-bar" style="margin-left: 10px; margin-right: 20px">
+									<button class="w3-button w3-left w3-green" onclick="window.location.href = 'Two_Words.html';">&laquo; Two Words</button>
+									<button class="w3-button w3-right w3-green" onclick="window.location.href = 'PrivacyPolicy.html';">Privacy Policy &raquo;</button>
+								</div>
               </div>
             </div>
           </div>
