--- a/wordwhisk/PrivacyPolicy.html
+++ b/wordwhisk/PrivacyPolicy.html
@@ -179,6 +179,10 @@
                 <ul class="style_bullet_title">
                   <li>By sending us an email to the frmwrks support team: <a href="mailto:support@frmwrks.com">support@frmwrks.com</a></li>
                 </ul>
+								<div class="w3-bar" style="margin-left: 10px; margin-right: 20px">
+									<button class="w3-button w3-left w3-green" onclick="window.location.href = 'Options.html';">&laquo; Options</button>
+									<button class="w3-button w3-right w3-green" onclick="window.location.href = 'ContactUs.html';">Contact Us &raquo;</button>
+								</div>
               </div>
             </div>
           </div>
