--- a/wordwhisk/Two_Words.html
+++ b/wordwhisk/Two_Words.html
@@ -186,7 +186,10 @@
                 <p class="style_wrap_up">
                 	LEAVE FUN LITTLE CLUES FOR YOUR KIDS!
                 </p>
-
+								<div class="w3-bar" style="margin-left: 10px; margin-right: 20px">
+									<button class="w3-button w3-left w3-green" onclick="window.location.href = 'One_Word_Range.html';">&laquo; Single Range</button>
+									<button class="w3-button w3-right w3-green" onclick="window.location.href = 'Options.html';">Options &raquo;</button>
+								</div>
               </div>
             </div>
           </div>
