--- a/wordwhisk/Welcome.html
+++ b/wordwhisk/Welcome.html
@@ -211,9 +211,19 @@
                 <p class="style_standard_paragraph">
                 	Oh wait!! There’s one more <b>critical</b> game with which <span class="style_findaword">WordWhisk</span> can help a lot — Scrabble! There are many iOS Scrabble games but don’t forget that <span class="style_findaword">WordWhisk</span> can be a big help with the physical Scrabble board game.
                 </p>
+                <p class="title_style">Does <span class="style_findaword">WordWhisk</span> cost anything?</p>
+                <p class="style_standard_paragraph">
+                	<span class="style_findaword">WordWhisk</span> can be used for free for the first 14 days — <span class="bold_green">WOO HOO!</span>
+                </p>
+                <p class="style_standard_paragraph">
+                	Once those first 14 days of free use have elapsed, you’ll need to spend a <span class="bold_red">whopping</span> – <span class="bold_green">NOT!</span> – 99¢ to open up the app for unlimited use. We’ll let you know from within the <span class="style_findaword">WordWhisk</span> app when that will need to be done.
+                </p>
 								<p class="style_wrap_up">
 									“SOLUTION ASSISTANT” ANXIOUS TO HELP!
 								</p>
+								<div class="w3-bar" style="margin-left: 10px; margin-right: 20px">
+									<button class="w3-button w3-right w3-green" onclick="window.location.href = 'Guidelines.html';">Guidelines &raquo;</button>
+								</div>
               </div>
             </div>
           </div>
