--- a/wordwhisk/Welcome.html
+++ b/wordwhisk/Welcome.html
@@ -216,17 +216,17 @@
                 	<span class="style_findaword">WordWhisk</span> can be used for free — and <span class="bold_green">Ad-Free</span> — for the first 14 days — <span class="bold_green">WOO HOO!</span>
                 </p>
                 <p class="style_standard_paragraph">
-                	Once those first 14 days of free use have elapsed, you’ll need to spend a <span class="bold_red">whopping</span> – <span class="bold_green">NOT!</span> – 99¢ to open up the app for unlimited use — and <span class="bold_green">Ad-Free!</span> We’ll let you know from within the <span class="style_findaword">WordWhisk</span> app when that will need to be done.
+                	Once those first 14 days of free use have elapsed, you’ll need to spend a <span class="bold_red">whopping</span> – <span class="bold_green">NOT!</span> – $1.99 to open up the app for unlimited use — and <span class="bold_green">Ad-Free!</span> We’ll let you know from within the <span class="style_findaword">WordWhisk</span> app when that will need to be done.
                 </p>
                 <p class="style_standard_paragraph">
-                	You may be wondering, “Why are you going <span class="bold_green">Ad-Free</span> and charging 99¢?” Simple: because all of the game apps for which <span class="style_findaword">WordWhisk</span> offers some ‘assistance’ are profusely showing ads and we do not want to add to that ‘ad’ burden!
+                	You may be wondering, “Why are you going <span class="bold_green">Ad-Free</span> and charging $1.99?” Simple: because all of the game apps for which <span class="style_findaword">WordWhisk</span> offers some ‘assistance’ are profusely showing ads and we do not want to add to that ‘ad’ burden!
                 </p>
-								<p class="style_wrap_up">
-									“SOLUTION ASSISTANT” ANXIOUS TO HELP!
-								</p>
-								<div class="w3-bar" style="margin-left: 10px; margin-right: 20px">
-									<button class="w3-button w3-right w3-green" onclick="window.location.href = 'Guidelines.html';">Guidelines &raquo;</button>
-								</div>
+                <p class="style_wrap_up">
+                	“SOLUTION ASSISTANT” ANXIOUS TO HELP!
+                </p>
+                <div class="w3-bar" style="margin-left: 10px; margin-right: 20px">
+                	<button class="w3-button w3-right w3-green" onclick="window.location.href = 'Guidelines.html';">Guidelines &raquo;</button>
+                </div>
               </div>
             </div>
           </div>
